Finished MapPointResource and added javascript features